--- a/JS_simple_dropdown/src/styles.css
+++ b/JS_simple_dropdown/src/styles.css
@@ -1,6 +1,5 @@
 h1 {
   color: white;
-  background-color: black;
 }
 
 body {
@@ -8,12 +7,14 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: gray;
 }
 
 .dropdown-menu {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 .dropdown-link {
@@ -25,10 +26,12 @@ body {
 
 .dropdown-content {
   position: absolute;
-  background-color: #ffa2a2;
+  top: 100%;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  display: none;
+  background-color: gold;
 }
 
 a:hover {
