Add transition effect on hover, update Readme.

--- a/JS_simple_dropdown/src/styles.css
+++ b/JS_simple_dropdown/src/styles.css
@@ -30,8 +30,13 @@ body {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  display: none;
-  background-color: gold;
+  background-color: cadetblue;
+
+  overflow: hidden;
+  max-height: 0;
+  opacity: 0;
+  pointer-events: none;
+  transition: max-height 200ms ease-out, opacity 200ms ease-out;
 }
 
 a:hover {
