--- a/typography_tutorial/typo.css
+++ b/typography_tutorial/typo.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: "Roboto";
+  src: url("Roboto-Light-webfont.woff") format("woff");
+  font-style: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("Roboto-LightItalic-webfont.woff") format("woff");
+  font-style: italic;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("Roboto-Bold-webfont.woff") format("woff");
+  font-style: normal;
+  font-weight: 700;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,27 +26,39 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
   font-size: 18px;
   line-height: 1.8em;
-  color: #5D6063;
+  color: #5d6063;
 }
 
+em {
+  font-style: italic;
+}
 
-h1, h2, h3, h4, h5, h6 {
+strong {
+  font-weight: bold;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   line-height: 1.3em;
   font-weight: normal;
   font-style: normal;
 }
 
-
 header {
   text-align: center;
-  color: #FFF;
+  color: #fff;
 }
 
 nav {
-  background-color: #54575A;
+  background-color: #54575a;
 }
 
 nav ul {
@@ -42,10 +75,10 @@ nav li {
   list-style-type: none;
 
   width: 50%;
-  padding-top: .5em;
-  padding-bottom: .5em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
 
-  border-top: 1px solid #888F95;
+  border-top: 1px solid #888f95;
 }
 
 nav li:nth-of-type(1),
@@ -54,16 +87,16 @@ nav li:nth-of-type(2) {
 }
 
 nav li:nth-of-type(2n) {
-  border-left: 1px solid #888F95;
+  border-left: 1px solid #888f95;
 }
 
 nav li.selected {
-  color: #54A5C4;
+  color: #54a5c4;
 }
 
 nav a:link,
 nav a:visited {
-  color: #888F95;
+  color: #888f95;
   text-decoration: none;
 }
 
@@ -71,21 +104,19 @@ nav a:hover,
 nav a:visited:hover,
 nav a:active,
 nav a:visited:active {
-  color: #54A5C4;
+  color: #54a5c4;
   text-decoration: underline;
 }
-
 
 .hero {
   padding-top: 9em;
   padding-bottom: 9em;
-  background-color: #5D6063;
+  background-color: #5d6063;
 }
 
 .hero h1 {
   font-size: 50px;
 }
-
 
 .section {
   padding: 4em 1em;
@@ -96,27 +127,27 @@ nav a:visited:active {
 
 .section h2 {
   font-size: 30px;
-  margin-bottom: .7em;
+  margin-bottom: 0.7em;
 }
 
 .section--gray {
-  border-top: 1px solid #D6D9DC;
+  border-top: 1px solid #d6d9dc;
 }
 
 .section--blue {
-  border-top: 1px solid #B2D6FF;
+  border-top: 1px solid #b2d6ff;
 }
 
 .section--blue h2 {
-  color: #5995DA;
+  color: #5995da;
 }
 
 .section--red {
-  border-top: 1px solid #F09A9D;
+  border-top: 1px solid #f09a9d;
 }
 
 .section--red h2 {
-  color: #D55C5F;
+  color: #d55c5f;
 }
 
 .section:first-of-type {
@@ -142,8 +173,8 @@ nav a:visited:active {
   display: block;
   text-decoration: none;
 
-  color: #FFF;
-  background-color: #4A90E2;
+  color: #fff;
+  background-color: #4a90e2;
   font-weight: bold;
   padding: 10px;
   border-radius: 5px;
@@ -154,16 +185,15 @@ nav a:visited:active {
 
 .button:hover,
 .button:visited:hover {
-  color: #FFF;
-  background-color: #6AA9F4;
+  color: #fff;
+  background-color: #6aa9f4;
 }
 
 .button:active,
 .button:visited:active {
-  color: #FFF;
-  background-color: #3F7CC4;
+  color: #fff;
+  background-color: #3f7cc4;
 }
-
 
 @media only screen and (min-width: 580px) {
   .section {
@@ -172,18 +202,17 @@ nav a:visited:active {
   }
   .section--gray:first-of-type,
   .section--gray {
-    border: 1px solid #D6D9DC;
+    border: 1px solid #d6d9dc;
   }
   .section--blue:first-of-type,
   .section--blue {
-    border: 1px solid #B2D6FF;
+    border: 1px solid #b2d6ff;
   }
   .section--red:first-of-type,
   .section--red {
-    border: 1px solid #F09A9D;
+    border: 1px solid #f09a9d;
   }
 }
-
 
 @media only screen and (min-width: 750px) {
   nav {
